--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,25 @@ body {
   background-color: #210718;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1 {
+  font-family: "Carattere";
+  color: #ffedf9;
+  font-size:  40px;
+}
+
+@media (max-width: 1150px) {
+ h1 {
+      font-size: 50px;
+  }
+}
+
+@media (max-width: 700px) {
+  h1 {
+      font-size: 8vw;
+  }
+}
+
+h2, h3, h4, h5, h6 {
   font-family: "Carattere";
   color: #ffedf9;
 }
