--- a/src/components/TastyItem.css
+++ b/src/components/TastyItem.css
@@ -43,7 +43,7 @@
 
 .Item__color {
     color: #210718;
-    padding: 10px;
+    padding: 5px;
 }
 
 .youtube {
@@ -56,8 +56,8 @@
     /* margin-top: 5%; */
 }
 
-.youtube:hover {
+/* .youtube:hover {
     transition: transform 0.2s;
     max-width: 50vw;  
-    /* transform: scale(1.05); */
-}
+    transform: scale(1.05);
+} */
