--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Carattere&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Belleza&display=swap');
 
 
 body {
-  font-family: "Work Sans";
+  font-family: 'Belleza', sans-serif;;
   background-color: #222;
   background-color: #210718;
 }
@@ -29,6 +29,9 @@ h1 {
 h2, h3, h4, h5, h6 {
   font-family: "Carattere";
   color: #ffedf9;
+}
+p {
+  line-height: 2.3;
 }
 
 #root {
