--- a/src/components/Category.css
+++ b/src/components/Category.css
@@ -44,7 +44,7 @@
 
 .Home__Title {
   height: 30vh;
-  font-family: "Work Sans";
+  font-family: 'Belleza', sans-serif;
   text-align: center;
   text-transform: uppercase;
   color: #210718;
@@ -63,6 +63,7 @@
 
 .Home__Link:hover {
   background-color: #210718;
+  color: #e1fcf4;
 }
 
 .Home__Link:nth-child(even):hover .Home__Title {
@@ -81,7 +82,7 @@
 }
 
 .Home__Link:hover .Home__Image {
-  transform: scale(1.5);
+  transform: scale(1.3);
 }
 .random {
   height: 110px;
@@ -89,4 +90,12 @@
   margin-top: 120px;
   font-size: 50px;
   color: #210718;
+}
+
+.random:hover {
+height: 110px;
+  text-align: center;
+  margin-top: 120px;
+  font-size: 50px;
+  color: #e1fcf4;
 }
