--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 
 
 body {
-  font-family: 'Belleza', sans-serif;;
+  font-family: 'Belleza', sans-serif;
   background-color: #222;
   background-color: #210718;
 }
