--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -31,7 +31,9 @@ input:hover {
 }
 
 .logo {
-    margin-left: 40%;
+    display: flex;
+    justify-content: center;
+    margin-top: 5em;
 }
 @media (max-width: 700px) {
    .logo {
