--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Carattere&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Belleza&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap');
 
 body {
-  font-family: 'Belleza', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   background-color: #222;
   background-color: #210718;
 }
@@ -11,7 +11,7 @@ body {
 h1 {
   font-family: "Carattere";
   color: #ffedf9;
-  font-size:  40px;
+  font-size:  2.5em;
 }
 
 @media (max-width: 1150px) {
