--- a/src/components/Category.css
+++ b/src/components/Category.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap');
+
+
 .Home__Headline {
   margin-top: 100px;
   font-size: 40px;
@@ -56,7 +59,7 @@
 }
 
 .Home__Title {
-  font-family: 'Belleza', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 1.5em;
   margin-bottom: 10%;
   text-align: center;
