--- a/src/components/TastyItem.css
+++ b/src/components/TastyItem.css
@@ -4,6 +4,7 @@
 }
 
 .Item__flex {
+  font-size: 1.6em;
   display: flex;
   /* flex-wrap: wrap; */
   justify-content: space-between;
@@ -14,6 +15,8 @@
   background-color: #e1fcf4;
   color: #210718;
 }
+
+
 
 .Item__img {
   width: calc(100% - 10px);
@@ -41,7 +44,33 @@
 .Item__color {
   color: #210718;
   padding: 5px;
+  border-bottom: 1px solid #210718;
 }
+
+@media only screen and (max-width: 750px) {
+    .Item__flex {
+        display: flex;
+        flex-direction: column;
+             margin-right: 10px;
+             margin-top: 20px;
+             padding: 25px;
+             border-radius: 15px;
+             background-color: #e1fcf4;
+             color: #210718;
+           }
+   .Item__leftSide {
+             color: #210718;
+             width: 100%;
+               
+         }
+         
+   .Item__rightSide {
+             color: #210718;
+             width: 100%;
+             text-align: left;
+             font-weight: bold;
+         }
+   }
 
 .youtube {
   border: 1px solid #210718;
