--- a/src/components/TastyItem.css
+++ b/src/components/TastyItem.css
@@ -44,20 +44,26 @@
 .Item__color {
   color: #210718;
   padding: 5px;
-  border-bottom: 1px solid #210718;
 }
 
 @media only screen and (max-width: 750px) {
+   .Item__img {
+        width: 100%;
+        height: 60vh;
+        border-radius: 15px;
+        margin-bottom: 12px;
+  }
+  
     .Item__flex {
-        display: flex;
-        flex-direction: column;
-             margin-right: 10px;
-             margin-top: 20px;
+             display: flex;
+             flex-direction: column;
+             margin: 20px 10px 0 15px;
              padding: 25px;
              border-radius: 15px;
              background-color: #e1fcf4;
              color: #210718;
            }
+
    .Item__leftSide {
              color: #210718;
              width: 100%;
