--- a/src/components/SocialMedia.css
+++ b/src/components/SocialMedia.css
@@ -2,12 +2,15 @@ footer {
   margin: 10vh 0 2vh 0;
 }
 footer div {
-  width: 15vw;
-  margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   transition: 1s;
 }
+
+footer > div > a:nth-of-type(2) {
+  margin: 0 1.6em;
+}
+
 footer a:hover {
   transform: scale(1.5);
 }
@@ -17,7 +20,4 @@ footer h4 {
 }
 
 @media (max-width: 1150px) {
-  footer div {
-    width: 40vw;
-  }
 }
